fixed small rendering bug where screen was too large

--- a/public/index.css
+++ b/public/index.css
@@ -2,8 +2,8 @@
 {
     margin-top: -5px;
     margin-left: -5px;
-    width: calc(100% + 6px);
-    height: calc(100% + 6px);
+    width: calc(100% + 3px);
+    height: calc(100% + 3px);
     overflow: hidden;
 }
 
